@@ -38,10 +38,13 @@ Copyright_License {
 #include "NMEA/Info.hpp"
 #include "NMEA/InputLine.hpp"
 #include "Waypoint/Waypoint.hpp"
+#include "Engine/Waypoint/Waypoints.hpp"
 
 #ifdef _UNICODE
 #include <windows.h>
 #endif
+
+#include <algorithm>
 
 class VolksloggerDevice : public AbstractDevice {
 private:
@@ -119,8 +122,6 @@ VolksloggerDevice::ParseNMEA(const char *String, NMEA_INFO *GPS_INFO,
     return false;
 }
 
-static unsigned nturnpoints = 0;
-
 static void
 CopyToNarrowBuffer(char *dest, size_t max_size, const TCHAR *src)
 {
@@ -143,26 +144,39 @@ CopyWaypoint(VLAPI_DATA::WPT &dest, const Waypoint &src)
   dest.lat = src.Location.Latitude.value_degrees();
 }
 
-static bool
-VLDeclAddWayPoint(VLAPI &vl, const Waypoint &way_point)
+static void
+CopyTurnPoint(VLAPI_DATA::DCLWPT &dest, const Declaration::TurnPoint &src)
 {
-  if (nturnpoints == 0) {
-    CopyWaypoint(vl.declaration.task.startpoint, way_point);
-    nturnpoints++;
-  } else {
-    CopyWaypoint(vl.declaration.task.turnpoints[nturnpoints-1], way_point);
-    nturnpoints++;
+  CopyWaypoint(dest, src.waypoint);
+
+  switch (src.shape) {
+  case Declaration::TurnPoint::CYLINDER:
+    dest.oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
+    dest.lw = dest.rz = src.radius;
+    dest.rs = 0;
+    break;
+
+  case Declaration::TurnPoint::SECTOR:
+    dest.oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
+    dest.lw = dest.rs = src.radius;
+    dest.rz = 0;
+    break;
+
+  case Declaration::TurnPoint::LINE:
+    dest.oztyp = VLAPI_DATA::DCLWPT::OZTYP_LINE;
+    dest.lw = src.radius;
+    dest.rs = dest.rz = 0;
+    break;
   }
 
-  CopyWaypoint(vl.declaration.task.finishpoint, way_point);
-
-  return true;
+  /* auto direction */
+  dest.ws = 360;
 }
 
 bool
 VolksloggerDevice::DeclareInner(VLAPI &vl, const Declaration *decl)
 {
-  nturnpoints = 0;
+  assert(decl->size() >= 2);
 
   if (vl.open(1, 20, 1, 38400L) != VLA_ERR_NOERR ||
       vl.read_info() != VLA_ERR_NOERR)
@@ -180,100 +194,22 @@ VolksloggerDevice::DeclareInner(VLAPI &vl, const Declaration *decl)
 		     sizeof(vl.declaration.flightinfo.competitionclass),
 		     decl->AircraftType);
 
-#ifdef OLD_TASK
-  if (way_points.verify_index(XCSoarInterface::SettingsComputer().HomeWaypoint)) {
-    const WAYPOINT &way_point = way_points.get(XCSoarInterface::SettingsComputer().HomeWaypoint);
-
-    sprintf(temp, "%S", way_point.Name);
-
-    strncpy(vl.declaration.flightinfo.homepoint.name, temp, 6);
-    vl.declaration.flightinfo.homepoint.lon = way_point.Location.Longitude;
-    vl.declaration.flightinfo.homepoint.lat = way_point.Location.Latitude;
-  }
-#endif
-
-  unsigned i;
-  for (i = 0; i < decl->size(); i++)
-    VLDeclAddWayPoint(vl, decl->get_waypoint(i));
-
-  vl.declaration.task.nturnpoints = (nturnpoints<=2)? 0: std::min(nturnpoints-2, (unsigned)12);
-
-#ifdef OLD_TASK
-  const SETTINGS_TASK settings = task.getSettings();
+  const Waypoint *home = way_points.find_home();
+  if (home != NULL)
+    CopyWaypoint(vl.declaration.flightinfo.homepoint, *home);
 
   // start..
-  switch(settings.StartType) {
-  case START_CIRCLE:
-    vl.declaration.task.startpoint.oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-    vl.declaration.task.startpoint.lw = min(1500,settings.StartRadius);
-    vl.declaration.task.startpoint.rz = min(1500,settings.StartRadius);
-    vl.declaration.task.startpoint.rs = 0;
-    break;
-  case START_LINE:
-    vl.declaration.task.startpoint.oztyp = VLAPI_DATA::DCLWPT::OZTYP_LINE;
-    vl.declaration.task.startpoint.lw = min(1500,settings.StartRadius*2);
-    vl.declaration.task.startpoint.rs = 0;
-    vl.declaration.task.startpoint.rz = 0;
-    break;
-  case START_SECTOR:
-    vl.declaration.task.startpoint.oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-    vl.declaration.task.startpoint.lw = min(1500,settings.StartRadius);
-    vl.declaration.task.startpoint.rz = 0;
-    vl.declaration.task.startpoint.rs = min(1500,settings.StartRadius);
-    break;
-  }
-  vl.declaration.task.startpoint.ws = 360;
+  CopyTurnPoint(vl.declaration.task.startpoint, decl->TurnPoints.front());
 
   // rest of task...
-  for (i=0; i<nturnpoints; i++) {
-    // note this is for non-aat only!
-    switch (settings.SectorType) {
-    case 0: // cylinder
-      vl.declaration.task.turnpoints[i].oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-      vl.declaration.task.turnpoints[i].rz = settings.SectorRadius;
-      vl.declaration.task.turnpoints[i].rs = 0;
-      vl.declaration.task.turnpoints[i].lw = 0;
-      break;
-    case 1: // sector
-      vl.declaration.task.turnpoints[i].oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-      vl.declaration.task.turnpoints[i].rz = 0;
-      vl.declaration.task.turnpoints[i].rs = 15000;
-      vl.declaration.task.turnpoints[i].lw = 0;
-      break;
-    case 2: // German DAe 0.5/10
-      vl.declaration.task.turnpoints[i].oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-      vl.declaration.task.turnpoints[i].rz = 500;
-      vl.declaration.task.turnpoints[i].rs = 10000;
-      vl.declaration.task.turnpoints[i].lw = 0;
-      break;
-    };
-    vl.declaration.task.turnpoints[i].ws = 360; // auto direction
-
-  }
+  const unsigned n = std::min(decl->size() - 2, 12u);
+  for (unsigned i = 0; i < n; ++i)
+    CopyTurnPoint(vl.declaration.task.turnpoints[i], decl->TurnPoints[i + 1]);
 
   // Finish
-  switch(settings.FinishType) {
-  case FINISH_CIRCLE:
-    vl.declaration.task.finishpoint.oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-    vl.declaration.task.finishpoint.lw = min(1500,settings.FinishRadius);
-    vl.declaration.task.finishpoint.rz = min(1500,settings.FinishRadius);
-    vl.declaration.task.finishpoint.rs = 0;
-    break;
-  case FINISH_LINE:
-    vl.declaration.task.finishpoint.oztyp = VLAPI_DATA::DCLWPT::OZTYP_LINE;
-    vl.declaration.task.finishpoint.lw = settings.FinishRadius*2;
-    vl.declaration.task.finishpoint.rz = 0;
-    vl.declaration.task.finishpoint.rs = 0;
-    break;
-  case FINISH_SECTOR:
-    vl.declaration.task.finishpoint.oztyp = VLAPI_DATA::DCLWPT::OZTYP_CYLSKT;
-    vl.declaration.task.finishpoint.lw = min(1500,settings.FinishRadius);
-    vl.declaration.task.finishpoint.rz = 0;
-    vl.declaration.task.finishpoint.rs = min(1500,settings.FinishRadius);
-    break;
-  }
-  vl.declaration.task.finishpoint.ws = 360;
-#endif
+  CopyTurnPoint(vl.declaration.task.finishpoint, decl->TurnPoints.back());
+
+  vl.declaration.task.nturnpoints = n;
 
   return vl.write_db_and_declaration() == VLA_ERR_NOERR;
 }
@@ -281,6 +217,9 @@ VolksloggerDevice::DeclareInner(VLAPI &vl, const Declaration *decl)
 bool
 VolksloggerDevice::Declare(const Declaration *decl)
 {
+  if (decl->size() < 2)
+    return false;
+
   ProgressGlue::Create(_T("Comms with Volkslogger"));
 
   port->StopRxThread();
