@@ -29,6 +29,7 @@ Copyright_License {
 #include "Device/device.hpp"
 #include "Device/Geoid.h"
 #include "Engine/Navigation/GeoPoint.hpp"
+#include "Engine/Waypoint/Waypoints.hpp"
 #include "InputEvents.hpp"
 #include "Thread/Trigger.hpp"
 #include "DeviceBlackboard.hpp"
@@ -37,6 +38,8 @@ Copyright_License {
 #include "Logger/IGCWriter.hpp"
 
 #include <stdio.h>
+
+Waypoints way_points;
 
 DeviceBlackboard device_blackboard;
 
