@@ -6,6 +6,7 @@ Version 6.0.3 - not yet released
 * devices
   - EW, Volkslogger: restart I/O thread after declaration failure
   - CAI302: check for I/O errors during declaration
+  - Volkslogger: enable task declaration
 * user interface
   - Language: translation updates
   - Auto zoom: don't disable in circling mode
